--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   position: sticky;
   top: 0;
-  z-index: 50;
+  z-index: 9999;
   border-bottom: 1px solid #bbb;
 }
 
